# BioHackathon-projects-2019

./: CODEOWNERS  LICENSE  README.md
projects/1/: README.md
projects/10/: EVA_Submission_template_V1_1_3_mapping_to_BRAPI_v2.xlsx  README.md
projects/11/: .gitignore  .travis.yml  LICENSE.md  README.md  install.sh  requirements.txt  runserver.sh
projects/29/src/: .gitignore  README.md  asterix.lighttpd.conf.template  asterix.scgi  config.yaml  distance_computations.py  package.json  pyproject.toml  quack2-uvicorn  start_twitter_stream
projects/29/src/client/: package.json
projects/29/src/client/public/: index.html
projects/29/src/client/src/: App.css  App.js  context.js  index.css  reducer.js
projects/29/src/client/src/components/QuackCard/: QuackCard.js  index.js
projects/29/src/client/src/components/QuackInput/: QuackInput.css  QuackInput.js  index.js  topics.json
projects/29/src/client/src/components/QuackLogo/: QuackLogo.js  index.js  quack_logo.sketch
projects/29/src/client/src/components/QuackNavBar/: QuackBasket.js  QuackNavBar.js  QuackNavBarLogo.js  QuackNavbarSearch.js  QuackSadBasket.js  index.js
projects/29/src/client/src/components/QuackQuinder/: QuackQuinder.js  index.js
projects/29/src/client/src/components/QuackVote/: QuackVote.js  index.js
projects/29/src/client/src/pages/: QuackResults.js  QuackSearch.js
projects/29/src/client/src/testdata/: testdata.json  updateData.json
projects/29/src/web_server/: main.py  neo4j_wrapper.py  package-lock.json  run.py
projects/29/src/web_server/src/: App.js  entry.js
(+153 files in other folders)
